--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">Songstone</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
+    <string name="title">Title</string>
+    <string name="artist">Artist</string>
+    <string name="apply">Apply</string>
+    <string name="cancel">Cancel</string>
 
 </resources>
