--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="navigation_drawer_close">Drawer Closed</string>
     <string name="navigation_item_stats">Statistic</string>
     <string name="navigation_item_sets">Settings</string>
+    <string name="navigation_item_change_path">Change Path</string>
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
