--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,14 @@
     <string name="navigation_item_sets">Settings</string>
     <string name="navigation_item_change_path">Change Path</string>
 
+    <!-- Left Drawer List  -->
+    <string-array name="drawer_options_list">
+        <item>@string/navigation_item_stats</item>
+        <item>@string/navigation_item_sets</item>
+        <item>@string/navigation_item_change_path</item>
+    </string-array>
+
+
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
